src/Contact/Contact.css
/* CONTACT US SECTION */
#contact {
  padding: 20px 20px;
  background-color: #f7f7f7;
  text-align: center;
}

h2 {
  margin-bottom: 8px;
  font-size: 2em;
  color: #333;
}

p {
  text-align: justify;
  font-size: 1.1em;
  color: #555;
  margin-bottom: 30px;
}

.contact-footer {
  text-align: center;
  font-size: 1.1em;
  color: #555;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 8px;
}

.contact-footer a {
  color: #57007b;
  text-decoration: none;
  display: inline-flex;
  align-items: center;
}

.contact-footer a:hover {
  text-decoration: underline;
}

.contact-footer img.fiverr-icon {
  width: 53px;
  height: 53px;
  vertical-align: middle;
}

.form-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  background: #fff;
  border-radius: 10px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  max-width: 600px;
  margin: 30px auto;
}

.input-group {
  position: relative;
  width: 100%;
  margin-bottom: 30px;
}

input,
textarea {
  width: 100%;
  padding: 15px 20px;
  border: 2px solid #ccc;
  border-radius: 5px;
  font-size: 1em;
  transition: border-color 0.3s;
  box-sizing: border-box;
}

input:focus,
textarea:focus {
  border-color: #57007b;
}

label {
  position: absolute;
  top: 50%;
  left: 20px;
  transform: translateY(-50%);
  background: white;
  padding: 0 5px;
  color: #aaa;
  pointer-events: none;
  transition: all 0.3s;
  display: flex;
  align-items: center;
}

input:focus ~ label,
input:valid ~ label,
textarea:focus ~ label,
textarea:valid ~ label {
  top: -15px;
  left: 15px;
  font-size: 0.8em;
  color: #57007b;
}

.form-icon {
  width: 20px;
  height: 20px;
  margin-right: 8px;
}

button {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 10px 20px;
  color: white;
  background: #57007b;
  border: none;
  border-radius: 5px;
  font-size: 1em;
  cursor: pointer;
  transition: background-color 0.3s;
}

button:hover {
  background-color: #45a049;
}

button img {
  width: 20px;
  height: 20px;
  margin-left: 8px;
}

@media (max-width: 600px) {
  .form-container {
    padding: 15px;
  }

  input,
  textarea {
    padding: 10px 15px;
  }

  button {
    width: 100%;
  }
}

